samples/_failures_safe/1761398352_475ef5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94251b5b.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_94251b5b.c:166: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_94251b5b.c:165:5: error: expected declaration or statement at end of input
  165 |     if
      |     ^~
